push/broadcast messages

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.koshake1.lesson1">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:label="@string/weather_app"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:label="@string/weather_app"
         android:theme="@style/AppTheme.NoActionBar">
+        <service android:name=".MyFirebaseService">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>
+
         <activity android:name=".main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".cities.CityActivity"></activity>
-        <activity android:name=".settings.SettingActivity"></activity>
-        <activity android:name=".cities.HistoryActivity"></activity>
+        <activity android:name=".cities.CityActivity" />
+        <activity android:name=".settings.SettingActivity" />
+        <activity android:name=".cities.HistoryActivity" />
     </application>
 
 </manifest>
